clients/polymer-js/app/styles/main.css
html, body, remote-client-element {
	height: 100%;
	margin: 0;
	padding: 0;
	background-color: white;
}

.sidebar {
	overflow-x: auto;
	padding: 0.5em;
	margin-right: 0.5em;
	background-color: #EEE;
	border-right: 1px dashed black;
}

.sidebar ul {
	padding: 0;
}

.sidebar ul li {
	list-style-type: none;
}

.sidebar a {
	cursor: pointer;
}

.sidebar .content {
	margin: 1em;
}

.sidebar settings-element {
	width: 20em;
}

.main {
	margin: 0;
}

topic-element {
	margin: 0.5em 0 0 0.5em;
	font-family: monospace;
}

lines-element {
	overflow-x: scroll;
	border-bottom: 1px solid black;
	border-top: 1px solid black;
}

lines-element p {
	font-family: monospace;
	margin: 0;
	padding: 3px;
	font-size: 14px;
	line-height: 15px;
}

input-element {
	margin-right: 0.5em;
	font-family: monospace;
}

